# mismiy

./: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
mismiy/: command.py  gen.py  loader.py  posts.py  tagging.py  xml.py
pages/: about.markdown  index.markdown
partials/: header.html.mustache  index.html.mustache  inline.css.mustache  post.html.mustache
posts/: 2024-05-05-first.markdown  2024-05-05-first.md  2024-05-06-minimal.markdown  2024-05-06-minimal.md  2024-05-07-watch.markdown  2024-05-07-watch.md  2024-05-18-fonts.markdown  2024-05-18-fonts.md  2024-05-19-dates.markdown  2024-05-19-dates.md  2024-05-26-atom.markdown  2024-05-26-atom.md  2024-05-30-tz.markdown  2024-05-30-tz.md  2024-06-16-pages.markdown  2024-06-16-pages.md  2024-06-23-default-namespace.md  2024-07-21-suffixes.md  2024-09-08-tags.md  2025-03-29-tags-how.md  2025-04-06-tags-how.md  2025-07-27-release.md  META.yaml
static/: style.css
templates/: header.html.mustache  index.css  index.html  index.html.mustache  inline.css  inline.css.mustache  page.html  post.html  post.html.mustache  tagged.html  tags.html
tests/: mixins.py  test_command.py  test_gen.py  test_loader.py  test_page.py  test_posts.py  test_posts_loader.py  test_tagging.py  test_xml.py
