[tool.poetry]
name = "mismiy"
version = "0.1.0"
description = ""
authors = ["Damian Cugley <pdc@alleged.org.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
strictyaml = "^1.7.3"
mistletoe = "^1.3.0"
chevron = "^0.14.0"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.poetry.scripts]
mismiy = 'mismiy.command:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
